tests/snapshots/examples_fixtures/type_system__failing__34_generic_effect_propagation_missing.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/34_generic_effect_propagation_missing.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `apply` requires effect `IO` in this function signature.

  --> examples/type_system/failing/34_generic_effect_propagation_missing.flx:13:5
   |
13 |     apply(io_inc, 1)
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
